@@ -1,3 +1,9 @@
+2008-11-23  Helge Deller  <deller@gmx.de>
+
+	* pa/linux-atomic.c (EBUSY): Define if not _LP64.
+	(__kernel_cmpxchg): Return -EBUSY if the kernel LWS call
+	succeeded and lws_ret is not equal to oldval.
+
 2008-11-23  Kaz Kojima  <kkojima@gcc.gnu.org>
 
 	* config/sh/sh.md (consttable_4): Call mark_symbol_refs_as_used.
